--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
 <footer class="text-center mt-10 text-gray-600">
-    &copy; <%= new Date().getFullYear(); %> Sanjay A V
+    &copy; <%= new Date().getFullYear(); %> RAVULA GANESH
 </footer>
